# PrismBI

./: .gitignore  BUILD.md  CONTRIBUTING.md  DESIGN.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Run.py  main.py  pyproject.toml
backend/db/: __init__.py
backend/docs/: llm-capability-probe-design.md
backend/models/: schemas.py
backend/routers/: admin.py  api_history.py  ask.py  auth.py  dashboards.py  datasources.py  exports.py  knowledge.py  modeling.py  profile.py  projects.py  query.py  recommendations.py  settings.py  threads.py  ws.py
backend/scripts/: fallback_rate_report.py  llm_capability_probe.py  transport_stream_report.py  unknown_columns_daily_report.py  unknown_columns_evaluator.py  unknown_columns_replay.py  unknown_columns_report.py
backend/services/: ask_config.py  ask_decompose.py  ask_execution.py  ask_idempotency.py  ask_observability.py  ask_service.py  ask_shared.py  auth_service.py  backup_service.py  cleanup_service.py  crypto_service.py  datasource_service.py  engine_service.py  export_service.py  llm_service.py  memory_service.py  migration_service.py  project_service.py  prompt_templates.py  rating_service.py  recommendation_service.py  security_policy_service.py  sensitive_keys.py  settings_service.py  sql_guard.py  sso_service.py  step_progress.py
backend/services/llm/adapters/: __init__.py  anthropic.py  base.py  ollama.py  openai_like.py
backend/services/sql_routing/: __init__.py  audit.py  candidate_guard.py  contracts.py  datasource_registry.py  execution_pipeline.py  execution_router.py  generation_pipeline.py  generation_router.py  llm_capability.py  llm_probe_suite.py  prompt_profiles.py
backend/tests/: conftest.py  test_ask.py  test_ask_complex_questions.py  test_ask_cross_language_matching.py  test_ask_generate_sql_flow.py  test_ask_sql_validation.py  test_auth.py  test_dashboards.py  test_datasources.py  test_db_migrations.py  test_fallback_rate_report.py  test_knowledge_injection.py  test_llm_semantic_matching.py  test_llm_service.py  test_modeling_model_types.py  test_modeling_views.py  test_projects.py  test_query.py  test_recommendations.py  test_run_logging.py  test_security_hardening.py  test_security_policy.py  test_settings.py  test_sql_generation_failures.py  test_sql_routing.py  test_step_progress.py  test_transport_stream_report.py  test_unknown_columns_daily_report.py  test_unknown_columns_evaluator.py  test_unknown_columns_replay.py  test_unknown_columns_report.py  test_ws.py
frontend/: Dockerfile  capacitor.config.ts  eslint.config.mjs  next.config.ts  (+5 more)
src-tauri/: Cargo.toml  generate-icons.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+227 files in other folders)
