[project]
name = "prism-bi-backend"
version = "0.1.0"
description = "PrismBI - Next Generation AI BI Tool Backend"
requires-python = ">=3.12"
license = { text = "AGPL-3.0" }
authors = [
    { name = "WrenAI", email = "dev@wrenai.com" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "duckdb>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "websockets>=14.0",
    "cryptography>=44.0.0",
    "lancedb>=0.12.0",
    "sqlglot>=26.0.0",
    "pyarrow>=19.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
    "orjson>=3.10.0",
    "sse-starlette>=2.2.0",
    "wren-engine>=0.5.0",
]

[project.optional-dependencies]
datasource = [
    "psycopg[binary]>=3.2.0",
    "psycopg2-binary>=2.9.10",
    "mysql-connector-python>=9.0.0",
    "PyMySQL>=1.1.1",
    "clickhouse-connect>=0.8.10",
    "pymssql>=2.3.1",
    "pyodbc>=5.1.0",
    "trino>=0.330.0",
    "PyAthena>=3.10.0",
    "google-cloud-bigquery>=3.32.0",
    "oracledb>=2.5.0",
    "snowflake-connector-python>=3.17.0",
    "databricks-sql-connector>=4.1.3",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "coverage>=7.6.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
